// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`moderationList ignores invalid fields, and only returns verifiedSpaces 1`] = `
{
  "verifiedSpaces": [
    "space1.eth",
    "space2.eth",
  ],
}
`;

exports[`moderationList returns all fields by default 1`] = `
{
  "flaggedLinks": [
    "https://gogle.com",
    "https://facebook.com",
  ],
  "flaggedProposals": [
    "0x1",
    "0x2",
  ],
  "flaggedSpaces": [
    "space3.eth",
    "space4.eth",
  ],
  "verifiedSpaces": [
    "space1.eth",
    "space2.eth",
  ],
  "verifiedTokens": {},
}
`;

exports[`moderationList returns multiple list: flaggedLinks and verifiedSpaces 1`] = `
{
  "flaggedLinks": [
    "https://gogle.com",
    "https://facebook.com",
  ],
  "verifiedSpaces": [
    "space1.eth",
    "space2.eth",
  ],
}
`;

exports[`moderationList returns only the flaggedLinks 1`] = `
{
  "flaggedLinks": [
    "https://gogle.com",
    "https://facebook.com",
  ],
}
`;

exports[`moderationList returns only the flaggedProposals 1`] = `
{
  "flaggedProposals": [
    "0x1",
    "0x2",
  ],
}
`;

exports[`moderationList returns only the verifiedSpaces 1`] = `
{
  "verifiedSpaces": [
    "space1.eth",
    "space2.eth",
  ],
}
`;
